Bug 433768 - System Monitor doesn't save column configuration
Summary: System Monitor doesn't save column configuration
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2021-03-01 01:48 UTC by lnxusr
Modified: 2021-03-16 13:30 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lnxusr 2021-03-01 01:48:07 UTC
SUMMARY
System Monitor doesn't save column configuration when closed.

STEPS TO REPRODUCE
1. Open System Monitor
2. Rearrange, resize, hide and/or unhide desired columns.
3. Close System Monitor
4. Open System Monitor

OBSERVED RESULT
Columns reset to default settings


EXPECTED RESULT
Columns should remain in status I set them on previous run of program.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.21
KDE Plasma Version: 5.21.1
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Alois Wohlschlager 2021-03-01 08:36:25 UTC
I can reproduce this on openSUSE Tumbleweed. It is always reproducible.
Comment 2 Bug Janitor Service 2021-03-08 17:24:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/136
Comment 3 Arjen Hiemstra 2021-03-09 16:23:55 UTC
Git commit dc7a175d69fa8d05d58d94b0dc4298bc53165476 by Arjen Hiemstra.
Committed on 09/03/2021 at 11:40.
Pushed by ahiemstra into branch 'master'.

SensorFaceController: Save on destruction if the face requests it

This adds a property "ForceSaveOnDestroy" to the faceproperties file
that, if set, means SensorFaceController will save when destroyed, even
if "shouldSync" is set to false. This fixes issues where certain faces
would use face configuration for properties that change outside of an
"edit" mode.
Related: bug 433536, bug 434005

M  +2    -1    faces/SensorFaceController.cpp

https://invent.kde.org/plasma/libksysguard/commit/dc7a175d69fa8d05d58d94b0dc4298bc53165476
Comment 4 Arjen Hiemstra 2021-03-16 13:30:04 UTC
Git commit cf77c8ceddfdd098be46ee63c9be4405659f8e45 by Arjen Hiemstra.
Committed on 16/03/2021 at 13:29.
Pushed by ahiemstra into branch 'Plasma/5.21'.

SensorFaceController: Save on destruction if the face requests it

This adds a property "ForceSaveOnDestroy" to the faceproperties file
that, if set, means SensorFaceController will save when destroyed, even
if "shouldSync" is set to false. This fixes issues where certain faces
would use face configuration for properties that change outside of an
"edit" mode.
Related: bug 433536, bug 434005


(cherry picked from commit dc7a175d69fa8d05d58d94b0dc4298bc53165476)

M  +2    -1    faces/SensorFaceController.cpp

https://invent.kde.org/plasma/libksysguard/commit/cf77c8ceddfdd098be46ee63c9be4405659f8e45