SensorFaceController: Save on destruction if the face requests it

This adds a property "ForceSaveOnDestroy" to the faceproperties file
that, if set, means SensorFaceController will save when destroyed, even
if "shouldSync" is set to false. This fixes issues where certain faces
would use face configuration for properties that change outside of an
"edit" mode.

BUG: 433768
BUG: 433536
BUG: 434005